[gd_scene load_steps=7 format=3 uid="uid://biwxi3qi7cjah"]

[ext_resource type="Script" path="res://menu-level.gd" id="1_v52is"]
[ext_resource type="Texture2D" uid="uid://c4gwr0e71585c" path="res://Asset/exterior (1).png" id="2_rypf3"]
[ext_resource type="FontFile" uid="uid://c5jtbv5vbsx7l" path="res://Asset/HelpMe.ttf" id="3_ssju3"]
[ext_resource type="FontFile" uid="uid://ci0ocnpkew0pp" path="res://Asset/Font/Melted Monster.ttf" id="4_24mhd"]
[ext_resource type="AudioStream" uid="uid://pdletkg7rd5v" path="res://Asset/dark-action-horror-trailer-112213.mp3" id="5_ntiac"]
[ext_resource type="AudioStream" uid="uid://diersvtqa3nxr" path="res://Asset/Horror SFX Free/Stingers and Spooky Triggers/Piano_stinger_dissonent.wav" id="6_b3obj"]

[node name="menu-level" type="Node2D"]
script = ExtResource("1_v52is")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(595, 350.125)
scale = Vector2(0.742188, 0.711182)
texture = ExtResource("2_rypf3")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 312.0
offset_top = 226.0
offset_right = 863.0
offset_bottom = 533.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="easy" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.87451, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.933333, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ssju3")
theme_override_font_sizes/font_size = 40
text = "EASY"
flat = true

[node name="medium" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ssju3")
theme_override_font_sizes/font_size = 40
text = "MEDIUM"
flat = true

[node name="hard" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ssju3")
theme_override_font_sizes/font_size = 40
text = "HARD"
flat = true

[node name="Label" type="Label" parent="."]
offset_left = 308.0
offset_top = 76.0
offset_right = 871.0
offset_bottom = 201.0
theme_override_colors/font_color = Color(1, 0, 0.0156863, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_24mhd")
theme_override_font_sizes/font_size = 80
text = "Kampus Keramat
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ntiac")
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_b3obj")

[connection signal="pressed" from="MarginContainer/VBoxContainer/easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/easy" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/hard" to="." method="_on_hard_pressed"]
